--- a/doc/kdevelop/index.docbook
+++ b/doc/kdevelop/index.docbook
@@ -44,7 +44,7 @@ Entries which require special treatment are marked with comments starting with '
 <bookinfo>
   <title>&kdevelop; User Manual</title>
 
-  <date>2004-02-28</date>
+  <date>2004-03-02</date>
   <releaseinfo>&kdevrelease;</releaseinfo>
 
   <authorgroup>
@@ -201,6 +201,16 @@ The information in this chapter is meant as a quick reference for a head start o
 
 <itemizedlist>
   <title>Look and Feel</title>
+
+  <listitem>
+    <formalpara id="nutshell-IDEAl-tabs">
+    <title>Force Smaller Tool View Tabs in IDEAl Mode</title>
+    <para>
+      In more recent versions (most notably from CVS HEAD) &kdevelop; will start with large text-based tool tip tabs around the work area. You may revert to the older icon-only view to save space on smaller screens if you enter <computeroutput>MDIStyle=0</computeroutput> under the <computeroutput>[UI]</computeroutput> tag in your <filename>&amp;KDEHOME/share/config/kdeveloprc</filename> configuration file.
+    </para>
+    </formalpara>
+    <para>(This is only preliminary effort. There will be a &GUI; configuration possibility very soon now.)</para>
+  </listitem>
 
   <listitem>
     <formalpara id="nutshell-full-screen">
