--- a/doc/kdevelop/index.docbook
+++ b/doc/kdevelop/index.docbook
@@ -44,7 +44,7 @@ Entries which require special treatment are marked with comments starting with '
 <bookinfo>
   <title>&kdevelop; User Manual</title>
 
-  <date>2004-02-28</date>
+  <date>2004-03-04</date>
   <releaseinfo>&kdevrelease;</releaseinfo>
 
   <authorgroup>
@@ -117,7 +117,7 @@ You will here find information on the following topics:
 </para>
 <itemizedlist>
   <listitem><para>
-  <link linkend="nutshell">In a nutshell</link>&mdash;a quick reference of the most used commands and actions.
+  <link linkend="nutshell">In a Nutshell&mdash;Tips and Tricks</link>&mdash;a quick reference of the most used commands and actions.
   </para></listitem>
   <listitem><para>
   <link linkend="unixdev">Development on UNIX</link>&mdash;a historical survey of UNIX program development, the main tools necessary and why you need an IDE.
@@ -189,7 +189,7 @@ You will here find information on the following topics:
 <!-- ====================================================================== -->
 
 <chapter id="nutshell">
-<title>In a Nutshell</title>
+<title>In a Nutshell&mdash;Tips and Tricks</title>
 
 <!-- Traditionally, most of this stuff will have been put into a FAQ section. It is more useful, however, to put it at the very start of a manual, as this is the place the (inexperienced) user first looks for.
 This chapter is meant to provide short hints and tips together with (mandatory) navigation links.
@@ -201,6 +201,22 @@ The information in this chapter is meant as a quick reference for a head start o
 
 <itemizedlist>
   <title>Look and Feel</title>
+
+  <listitem>
+    <formalpara id="nutshell-IDEAl-tabs">
+    <title>Force Smaller Tool View Tabs in IDEAl Mode</title>
+    <para>
+      In more recent versions (most notably from CVS HEAD) &kdevelop; will start with large text-based tool tip tabs around the work area. You may change this look if you place a <computeroutput>MDIStyle</computeroutput> entry under the <computeroutput>[UI]</computeroutput> tag in your <filename>&amp;KDEHOME/share/config/kdeveloprc</filename> configuration file as follows:
+    </para>
+    </formalpara>
+    <simplelist>
+      <member><computeroutput>MDIStyle = 0</computeroutput>: icons only</member>
+      <member><computeroutput>MDIStyle = 1</computeroutput>: text only (default)</member>
+      <member><computeroutput>MDIStyle = 2</computeroutput>: icons only on smaller tabs</member>
+      <member><computeroutput>MDIStyle = 3</computeroutput>: icons and text</member>
+    </simplelist>
+    <para>(This manual change effort is only preliminary. There will be a &GUI; configuration possibility some time in the future.)</para>
+  </listitem>
 
   <listitem>
     <formalpara id="nutshell-full-screen">
@@ -232,6 +248,16 @@ The information in this chapter is meant as a quick reference for a head start o
     <menuchoice><guimenu>Project</guimenu> <guimenuitem>New Project...</guimenuitem></menuchoice> will start the <link linkend="applicationwizard">&appwizard;</link>.
     </para>
     </formalpara>
+  </listitem>
+
+  <listitem>
+    <formalpara id="nutshell-new-custom-project">
+      <title>Create a Custom Project</title>
+      <para>
+      There is no direct way to create a custom project (&ie; a project which does use its own makefiles). Use <menuchoice><guimenu>Project</guimenu> <guimenuitem>Import Existing Project</guimenuitem></menuchoice> instead. Remember to set the appropriate <guilabel>Project Type</guilabel>, labeled by an additional <quote>(Custom Makefiles)</quote>, in the dialog.
+      </para>
+    </formalpara>
+    <para>If there is no existing project to import, create a new automake-based one first, then re-import it as custom project.</para>
   </listitem>
 
   <listitem>
